# agentkit

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Chinook.db  LICENSE  Makefile  README.md  docker-compose-coding.yml  docker-compose-demo.yml  docker-compose-development.yml  docker-compose-prod.yml  docker-compose.yml  prometheus.yml
backend/app/: .pylintrc  alembic.ini  pyproject.toml  setup.cfg
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2023-06-02-15-48_adbe2344fb23.py
backend/app/app/: document_ingestion.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/v1/: api.py
backend/app/app/config/: agent.yml  extraction.yml  tools.yml
backend/app/app/core/: celery.py  config.py  fastapi.py
backend/app/app/db/: SQLDatabaseExtended.py  session.py  vector_db_code_ingestion.py  vector_db_pdf_ingestion.py
backend/app/app/models/: __init__.py  auth_model.py  base_uuid_model.py
backend/app/app/opt/project_scheduling/: optimizer.py  plots.py  post_processing.py  run_schedule_optimization.py
backend/app/app/schemas/: __init__.py  agent_schema.py  auth_schema.py  common_schema.py  ingestion_schema.py  message_schema.py  response_schema.py  streaming_schema.py  tool_schema.py  user_schema.py
backend/app/app/schemas/tool_schemas/: pdf_tool_schema.py  sql_tool_schema.py
backend/app/app/services/chat_agent/: meta_agent.py
backend/app/app/tool_constants/public_demo_data/: README.md  (+14 more)
backend/app/app/utils/: __init__.py  config.py  config_loader.py  config_utils.py  custom_yaml_loader.py  fastapi_globals.py  llm.py  minio_client.py  sql.py  utils.py  uuid6.py  uuid7.py  uuid_.py
backend/app/tests/: conftest.py  pytest.ini
backend/app/tests/api/: test_chat.py  test_main.py
backend/app/tests/config/: agent-test.yml  tools.yml
backend/app/tests/fake/: chat_model.py  pdf_pipeline.py  sql_db.py  vector_db.py
backend/app/tests/tools/: test_basellm_tool.py  test_pdf_tool.py  test_sql_tool.py  test_summarizer_tool.py  test_visualizer_tool.py
(+286 files in other folders)
